# aws-serverless-shopping-cart

./: .gitignore  note.md  pyproject.toml
backend/: .coveragerc  Makefile  pytest.ini
backend/.aws-sam/: build.toml
backend/shopping-cart-service/: add_to_cart.py  get_cart_total.py
backend/shopping-cart-service/tests/: __init__.py  mock.py  mock_table.py  sample.csv  test_add_to_cart.py  test_delete_from_cart.py  test_example.py  test_get_cart_total.py  test_list_cart.py  test_shared.py
backend/shopping-cart-service/tests/utils/: logger.py  mock_shared.py  product_data.py
