[tool.poetry]
name = "aws-serverless-shopping-cart"
version = "0.1.0"
description = ""
authors = ["saiki343 <stakanari343@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cognitojwt = "^1.4.1"
aws-lambda-powertools = "^1.25.2"
boto3 = "^1.21.14"
pytest = "^7.0.1"
pandas = "^1.4.1"
moto = {extras = ["s3", "dynamodb", "dynamodbstreams", "lambda"], version = "^3.0.7"}
autopep8 = "^1.6.0"
boto3-stubs = "^1.21.15"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
path = ".venv"
